fix missing bullets and heading spacing

--- a/src/components/NewHomePage/SecurityPage/SecurityPage.css
+++ b/src/components/NewHomePage/SecurityPage/SecurityPage.css
@@ -50,10 +50,6 @@ p.no-break {
   margin: 0; 
 }
 
-h4 {
-  text-transform: uppercase;
-}
-
 .scrolling-icons-border {
   height: 51px;
   width: 157px;
