--- a/src/theme/DocPage/Layout/Main/styles.module.css
+++ b/src/theme/DocPage/Layout/Main/styles.module.css
@@ -26,10 +26,15 @@ blockquote {
   padding: 0 16px;
 }
 
-h3, h4 {
-  /* display: flex; */
-}
 
 * .breadcrumbs * {
   columns: black;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px;
+}
+
+li {
+  list-style-type: disc;
 }
